--- a/Assets/Scripts/Services/CameraService/CameraService.asmdef
+++ b/Assets/Scripts/Services/CameraService/CameraService.asmdef
@@ -2,7 +2,8 @@
     "name": "CameraService",
     "rootNamespace": "",
     "references": [
-        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
+        "GUID:4307f53044263cf4b835bd812fc161a4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
